--- a/BisLeagues.Presentation/Views/Shared/Components/Fixture/Default.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/Components/Fixture/Default.cshtml
@@ -5,7 +5,7 @@
         <div id="matches-detail-slider" class="matches-detail-slider">
             @foreach (var match in Model.MatchesPartOne)
             {
-                <div class="item matches-detail" style="background: url(/Assets/images/slider_layer.jpg);">
+                <div class="item matches-detail" style="background: url(@Url.Action("Resize", "Image", new { url = "Assets/images/slider_layer.jpg", width = 360, height = 328 })">
                     <!-- <div class="time-left">
                         <ul id="countdown-1" class="countdown">
                             <li><span class="days">00</span>D:</li>
