--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
@@ -10,7 +10,7 @@
             {
                 <!-- Item -->
                 <div class="item @{if (first) { first = false; @Html.Raw("active"); }}">
-                    <img class="fullscreen" src="~/Assets/images/slider_layer.jpg" alt="">
+                    <img class="fullscreen" src="@Url.Action("Resize", "Image", new { url = "Assets/images/slider_layer.jpg", width = 1725, height = 1159 })"  alt="">
                     <div class="position-center-x full-width">
                         <div class="container">
                             <div class="banner-layer pull-right">
