--- a/BisLeagues.Presentation/Views/Teams/Details.cshtml
+++ b/BisLeagues.Presentation/Views/Teams/Details.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LogoUrl)
+            @Html.DisplayNameFor(model => model.Logo)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.LogoUrl)
+            @Html.DisplayFor(model => model.Logo)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CreatedOnUtc)
