--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
@@ -31,15 +31,15 @@
                 </div>
                 <!-- Footer Column -->
                 <!-- Footer Column -->
-                <div class="col-sm-4 col-xs-6 r-full-width-2 r-full-width">
+                @*<div class="col-sm-4 col-xs-6 r-full-width-2 r-full-width">
                     <div class="column-widget h-white">
                         <h5>Advertisment</h5>
                         <a href="#"><img src="~/Assets/images/footer-add.jpg" alt=""></a>
                     </div>
-                </div>
+                </div>*@
                 <!-- Footer Column -->
                 <!-- Footer Column -->
-                <div class="col-sm-4 col-xs-6 r-full-width-2 r-full-width">
+                @*<div class="col-sm-4 col-xs-6 r-full-width-2 r-full-width">
                     <div class="column-widget h-white">
                         <h5>Sponcer</h5>
                         <ul id="brand-icons-slider-2" class="brand-icons-slider-2">
@@ -61,7 +61,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div>*@
                     <!-- Footer Column -->
     
                 </div>
