--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
@@ -11,7 +11,7 @@
                 <!-- Search Bar -->
                 <div class="search-bar-holder pull-right">
                     <div class="search-bar">
-                        <input type="text" class="form-control" placeholder="search enter please...">
+                        <input type="text" class="form-control" placeholder="takım, oyuncu falan ara..">
                         <i class="fa fa-search"></i>
                     </div>
                 </div>
