--- a/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
@@ -10,6 +10,7 @@
         <!-- Responsive Button -->
         <!-- User Login Option -->
         <ul class="user-login-option pull-right">
+            <partial name="_Partials/_Message" />
             <li class="social-icon">
                 <ul class="social-icons style-5">
                     <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -36,8 +37,8 @@
                                 </div>
                                 <div class="form-group custom-checkbox">
                                     @*<label>
-                                        <input type="checkbox"> Stay login
-                                    </label>*@
+                                    <input type="checkbox"> Stay login
+                                </label>*@
                                     <a class="pull-right forgot-password" href="#"></a>
                                     <a href="#" class="pull-right forgot-password" data-toggle="modal" data-target="#login-modal-2">Şifremi unuttum</a>
                                 </div>
