--- a/BisLeagues.Presentation/Views/Matches/Index.cshtml
+++ b/BisLeagues.Presentation/Views/Matches/Index.cshtml
@@ -6,6 +6,17 @@
 }
 @section Heading{
 
+    <!-- Page Heading & Breadcrumbs  -->
+    <div class="page-heading-breadcrumbs">
+        <div class="container">
+            <h2>Team Grid</h2>
+            <ul class="breadcrumbs">
+                <li><a href="#">Home</a></li>
+                <li>Team Grid</li>
+            </ul>
+        </div>
+    </div>
+    <!-- Page Heading & Breadcrumbs  -->
     <!-- Page Heading banner -->
     <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" data-appear-top-offset="600" data-parallax="scroll" data-image-src="~/Assets/images/inner-banner/img-04.jpg">
         <div class="container">
