--- a/BisLeagues.Presentation/wwwroot/Assets/css/style.css
+++ b/BisLeagues.Presentation/wwwroot/Assets/css/style.css
@@ -1089,7 +1089,7 @@ font-size: 20px; color: rgba(255,255,255,0.4); position: absolute; top: 50%; mar
 .match-detail-deep .video{ position: relative; margin: 0 0 30px;}
 .match-detail-deep h2{ text-transform: capitalize; font-size: 30px;}
 .match-detail-deep > p{ font-size: 16px; color: #555; font-weight: 600;}
-.match-detail-deep article{ position: relative; padding: 0 0 0 100px;}
+.match-detail-deep article{ position: relative; padding: 0 0 0 0;}
 .match-detail-deep article .social-icons{ position: absolute; left: 20px;}
 .match-detail-deep article:last-child p{ margin: 0;}
 .match-detail-deep article .social-icons ul li{ float: none; margin: 0 0 10px;}
