--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
@@ -5,7 +5,7 @@
     
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="home-1.html"><img src="~/Assets/images/logo-4.png" alt=""></a>
+                    <a href="@Url.Action("Index", "Home")"><img src="~/Assets/images/logo-4.png" alt=""></a>
                 </div>
                 <!-- Logo -->
                 <!-- Search Bar -->
