--- a/BisLeagues.Presentation/Views/Matches/UpComingMatches.cshtml
+++ b/BisLeagues.Presentation/Views/Matches/UpComingMatches.cshtml
@@ -1,4 +1,4 @@
-﻿@model BisLeagues.Presentation.ViewModels.MatchViewModel
+﻿@model BisLeagues.Presentation.ViewModels.UpComingMatchesViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -9,16 +9,16 @@
     <!-- Page Heading & Breadcrumbs  -->
     <div class="page-heading-breadcrumbs">
         <div class="container">
-            <h2>Team Grid</h2>
+            <h2>Gelecek Maçlar</h2>
             <ul class="breadcrumbs">
-                <li><a href="#">Home</a></li>
-                <li>Team Grid</li>
+                <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
+                <li>Gelecek Maçlar</li>
             </ul>
         </div>
     </div>
     <!-- Page Heading & Breadcrumbs  -->
     <!-- Page Heading banner -->
-    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" data-appear-top-offset="600" data-parallax="scroll" data-image-src="~/Assets/images/inner-banner/img-04.jpg">
+    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
         <div class="container">
             <div class="pager-heading match-detail white-heading">
                 <span class="pull-left"><img src="@Url.Action("Resize", "Image", new { url = Model.UpComingMatch.Home.Logo.Path, width = 105, height = 105 })" alt="@Model.UpComingMatch.Home.Name"></span>
@@ -51,7 +51,7 @@
         <div class="row">
             <!-- match Contenet -->
             <div class="matches-shedule-holder">
-                <div class="col-lg-9 col-sm-8">
+                <div class="col-lg-12 col-sm-12">
 
                     <!-- Matches Dates Shedule -->
                     <div class="matches-dates-shedule">
@@ -59,11 +59,11 @@
                             @foreach (var match in Model.Matches)
                             {
                                 <li>
-                                    <span class="pull-left"><img src="@match.Home.Logo.Path" alt="@match.Home.Name"></span>
-                                    <span class="pull-right"><img src="@match.Away.Logo.Path" alt="@match.Away.Name"></span>
+                                    <span class="pull-left"><img src="@Url.Action("Resize", "Image", new { url = match.Home.Logo.Path, width = 105, height = 105 })" alt="@match.Home.Name"></span>
+                                    <span class="pull-right"><img src="@Url.Action("Resize", "Image", new { url = match.Away.Logo.Path, width = 105, height = 105 })" alt="@match.Away.Name"></span>
                                     <div class="detail">
-                                        <a href="#">Match Detail<i class="fa fa-angle-double-right"></i></a>
-                                        <strong>@match.Home.Name<i class="red-color"> @TimeZoneInfo.ConvertTimeFromUtc(Model.UpComingMatch.MatchDate, TimeZoneInfo.Local).ToString("dddd, dd MMMM yyyy")</i> @match.Away.Name</strong>
+                                        <a href="#"><i></i></a>
+                                        <strong>@match.Home.Name<i class="red-color"> | @TimeZoneInfo.ConvertTimeFromUtc(match.MatchDate, TimeZoneInfo.Local).ToString("dddd, dd MMMM yyyy") | </i> @match.Away.Name</strong>
                                         <!--<span class="location-marker"><i class="fa fa-map-marker"></i>3358 Evergreen Lane England</span>-->
                                     </div>
                                 </li>
@@ -91,52 +91,6 @@
                 </div>
             </div>
             <!-- match Contenet -->
-            <!-- Aside -->
-            <div class="col-lg-3 col-sm-4">
-
-                <!-- Aside Widget -->
-                <div class="aside-widget">
-                    <a href="#"><img src="~/Assets/images/adds-02.jpg" alt=""></a>
-                </div>
-                <!-- Aside Widget -->
-                <!-- Aside Widget -->
-                <div class="aside-widget">
-                    <h3><span>Popular News</span></h3>
-                    <div class="Popular-news">
-                        <ul>
-                            <li>
-                                <img src="~/Assets/images/popular-news/img-01.jpg" alt="">
-                                <h5><a href="#">Two touch penalties, imaginary cards</a></h5>
-                                <span class="red-color"><i class="fa fa-clock-o"></i>22 Feb, 2016</span>
-                            </li>
-                            <li>
-                                <img src="~/Assets/images/popular-news/img-02.jpg" alt="">
-                                <h5><a href="#">Two touch penalties, imaginary cards</a></h5>
-                                <span class="red-color"><i class="fa fa-clock-o"></i>22 Feb, 2016</span>
-                            </li>
-                            <li>
-                                <img src="~/Assets/images/popular-news/img-03.jpg" alt="">
-                                <h5><a href="#">Two touch penalties, imaginary cards</a></h5>
-                                <span class="red-color"><i class="fa fa-clock-o"></i>22 Feb, 2016</span>
-                            </li>
-                            <li>
-                                <img src="~/Assets/images/popular-news/img-04.jpg" alt="">
-                                <h5><a href="#">Two touch penalties, imaginary cards</a></h5>
-                                <span class="red-color"><i class="fa fa-clock-o"></i>22 Feb, 2016</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Aside Widget -->
-                <!-- Aside Widget -->
-                <div class="aside-widget">
-                    <h3><span>Archive</span></h3>
-                    <div id="calendar" class="calendar"></div>
-                </div>
-                <!-- Aside Widget -->
-
-            </div>
-            <!-- Aside -->
 
         </div>
     </div>
