--- a/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
@@ -39,6 +39,8 @@
                                     @*<label>
                                     <input type="checkbox"> Stay login
                                 </label>*@
+                                    <a class="pull-left forgot-password" href="#"></a>
+                                    <a href="#" class="pull-left forgot-password" data-toggle="modal" data-target="#login-modal-3">Kayıt Ol</a>
                                     <a class="pull-right forgot-password" href="#"></a>
                                     <a href="#" class="pull-right forgot-password" data-toggle="modal" data-target="#login-modal-2">Şifremi unuttum</a>
                                 </div>
@@ -59,6 +61,40 @@
                                 </div>
                                 <div class="form-group">
                                     <button class="btn full-width red-btn">Yolla çabuk</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="modal fade" id="login-modal-3">
+                        <div class="login-form position-center-center">
+                            <h2>Kayıt Ol<button class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button></h2>
+                            <form action="@Url.Action("SignUp", "Authentication")" method="post">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="firstName" placeholder="İsim">
+                                    <i class=" fa fa-user"></i>
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="lastName" placeholder="Soyisim">
+                                    <i class=" fa fa-user"></i>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" name="email" placeholder="Email">
+                                    <i class=" fa fa-envelope"></i>
+                                </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="userName" placeholder="Kullanıcı Adı">
+                                    <i class=" fa fa-user"></i>
+                                </div>
+                                <div class="form-group">
+                                    <input type="date" class="form-control" name="birthDate" placeholder="Doğum Tarihi">
+                                    <i class=" fa fa-calendar"></i>
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control" name="password" placeholder="Şifre">
+                                    <i class=" fa fa-lock"></i>
+                                </div>
+                                <div class="form-group">
+                                    <button class="btn full-width red-btn">Gönder</button>
                                 </div>
                             </form>
                         </div>
