--- a/BisLeagues.Presentation/Views/Home/Index.cshtml
+++ b/BisLeagues.Presentation/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model BisLeagues.Presentation.ViewModels.HomeViewModel
+﻿@model BisLeagues.Presentation.Models.ViewModels.HomeViewModel
 @inject BisLeagues.Core.Utility.IUserManager UserManager
 @{
     ViewData["Title"] = "Home Page";
