--- a/BisLeagues.Presentation/Views/Matches/PastMatches.cshtml
+++ b/BisLeagues.Presentation/Views/Matches/PastMatches.cshtml
@@ -1,4 +1,4 @@
-﻿@model BisLeagues.Presentation.ViewModels.PastMatchesViewModel
+﻿@model BisLeagues.Presentation.Models.ViewModels.PastMatchesViewModel
 
 @{
     ViewData["Title"] = "Index";
