--- a/BisLeagues.Presentation/Views/Matches/UpComingMatches.cshtml
+++ b/BisLeagues.Presentation/Views/Matches/UpComingMatches.cshtml
@@ -1,4 +1,4 @@
-﻿@model BisLeagues.Presentation.ViewModels.UpComingMatchesViewModel
+﻿@model BisLeagues.Presentation.Models.ViewModels.UpComingMatchesViewModel
 
 @{
     ViewData["Title"] = "Index";
