--- a/BisLeagues.Presentation/Views/News/Detail.cshtml
+++ b/BisLeagues.Presentation/Views/News/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model BisLeagues.Presentation.ViewModels.NewViewModel
+﻿@model BisLeagues.Presentation.Models.ViewModels.NewViewModel
 
 @{
     ViewData["Title"] = "Index";
