--- a/BisLeagues.Presentation/Views/Shared/Components/Fixture/Default.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/Components/Fixture/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model BisLeagues.Presentation.ViewModels.FixtureViewModel
+﻿@model BisLeagues.Presentation.Models.ViewModels.FixtureViewModel
 <div class="col-sm-4 col-xs-5 r-full-width">
     <div class="next-matches">
         <h4>GELECEK MAÇLAR</h4>
