--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Head.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Head.cshtml
@@ -2,7 +2,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="" />
     <!-- Document Title -->
-    <title>Soccer HTML5 Template</title>
+    <title>@ViewBag.Title | BisLeague</title>
     <!-- StyleSheets -->
     <link rel="stylesheet" href="~/Assets/css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="~/Assets/css/main.css">
