--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
@@ -1,4 +1,5 @@
-﻿    <!-- Nav -->
+﻿
+    <!-- Nav -->
 <div class="nav-holder">
     <div class="container">
         <div class="maga-drop-wrap">
@@ -25,143 +26,13 @@
                         <li><a href="home-2.html">Home 2</a></li>
                     </ul>
                 </li>
-                <li><a href="about.html">about</a></li>
+                <li><a href="about.html">Hakkımızda</a></li>
                 <li>
-                    <a href="team.html">team</a>
-                    <ul>
-                        <li><a href="team.html">team</a></li>
-                        <li><a href="team-detail.html">Team detail</a></li>
-                        <li><a href="team-width-sidebar.html">team-widthsidebar</a></li>
-                    </ul>
+                    <a href="@Url.Action("Detail","Teams", new { isMyTeam = true })">Takımım</a>
                 </li>
                 <li class="mega-dropdown">
-                    <a href="#">news</a>
-                    <ul>
-                        <li class="row">
-                            <div class="col-lg-3 col-md-3 col-sm-3">
-                                <div class="blog-categories">
-                                    <h2>Blog Categories</h2>
-                                    <ul class="blog-categories-list">
-                                        <li><a href="#">Blog 1 Column (Right Sidebar)</a></li>
-                                        <li><a href="#">Blog Medium With Right Sidebar</a></li>
-                                        <li><a href="#">Masonry (Right Sidebar)</a></li>
-                                        <li><a href="#">Blog 4 Columns</a></li>
-                                        <li><a href="#">Blog 1 Column (Right Sidebar)</a></li>
-                                        <li><a href="#">Masonry (Right Sidebar)</a></li>
-                                        <li><a href="#">Blog 1 Column (Right Sidebar)</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-lg-9 col-md-9 col-sm-9">
-                                <div id="mega-blog-slider" class="mega-blog-slider">
+                    <a href="@Url.Action("Index", "News")">Haberler</a>
 
-                                    <!-- Post Img -->
-                                    <div class="item">
-
-                                        <!-- Post Img -->
-                                        <div class="large-post-img">
-                                            <img src="~/Assets/images/blog-grid-view/img-2-1.jpg" alt="">
-                                        </div>
-                                        <!-- Post Img -->
-                                        <!-- Post Detail -->
-                                        <div class="large-post-detail style-3 p-0">
-                                            <span class="red-color">Englis FA Cup</span>
-                                            <h2>Man United reunion for Ibrahimovic,</h2>
-                                        </div>
-                                        <!-- Post Detail -->
-
-                                    </div>
-                                    <!-- Post Img -->
-                                    <!-- Post Img -->
-                                    <div class="item">
-
-                                        <!-- Post Img -->
-                                        <div class="large-post-img">
-                                            <img src="~/Assets/images/blog-grid-view/img-2-2.jpg" alt="">
-                                        </div>
-                                        <!-- Post Img -->
-                                        <!-- Post Detail -->
-                                        <div class="large-post-detail style-3 p-0">
-                                            <span class="red-color">Englis FA Cup</span>
-                                            <h2>Man United reunion for Ibrahimovic,</h2>
-                                        </div>
-                                        <!-- Post Detail -->
-
-                                    </div>
-                                    <!-- Post Img -->
-                                    <!-- Post Img -->
-                                    <div class="item">
-
-                                        <!-- Post Img -->
-                                        <div class="large-post-img">
-                                            <img src="~/Assets/images/blog-grid-view/img-2-3.jpg" alt="">
-                                        </div>
-                                        <!-- Post Img -->
-                                        <!-- Post Detail -->
-                                        <div class="large-post-detail style-3 p-0">
-                                            <span class="red-color">Englis FA Cup</span>
-                                            <h2>Man United reunion for Ibrahimovic,</h2>
-                                        </div>
-                                        <!-- Post Detail -->
-
-                                    </div>
-                                    <!-- Post Img -->
-                                    <!-- Post Img -->
-                                    <div class="item">
-
-                                        <!-- Post Img -->
-                                        <div class="large-post-img">
-                                            <img src="~/Assets/images/blog-grid-view/img-2-4.jpg" alt="">
-                                        </div>
-                                        <!-- Post Img -->
-                                        <!-- Post Detail -->
-                                        <div class="large-post-detail style-3 p-0">
-                                            <span class="red-color">Englis FA Cup</span>
-                                            <h2>Man United reunion for Ibrahimovic,</h2>
-                                        </div>
-                                        <!-- Post Detail -->
-
-                                    </div>
-                                    <!-- Post Img -->
-                                    <!-- Post Img -->
-                                    <div class="item">
-
-                                        <!-- Post Img -->
-                                        <div class="large-post-img">
-                                            <img src="~/Assets/images/blog-grid-view/img-2-1.jpg" alt="">
-                                        </div>
-                                        <!-- Post Img -->
-                                        <!-- Post Detail -->
-                                        <div class="large-post-detail style-3 p-0">
-                                            <span class="red-color">Englis FA Cup</span>
-                                            <h2>Man United reunion for Ibrahimovic,</h2>
-                                        </div>
-                                        <!-- Post Detail -->
-
-                                    </div>
-                                    <!-- Post Img -->
-                                    <!-- Post Img -->
-                                    <div class="item">
-
-                                        <!-- Post Img -->
-                                        <div class="large-post-img">
-                                            <img src="~/Assets/images/blog-grid-view/img-2-2.jpg" alt="">
-                                        </div>
-                                        <!-- Post Img -->
-                                        <!-- Post Detail -->
-                                        <div class="large-post-detail style-3 p-0">
-                                            <span class="red-color">Englis FA Cup</span>
-                                            <h2>Man United reunion for Ibrahimovic,</h2>
-                                        </div>
-                                        <!-- Post Detail -->
-
-                                    </div>
-                                    <!-- Post Img -->
-
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
                 </li>
                 <li>
                     <a href="@Url.Action("UpComingMatches", "Matches")">Maçlar</a>
@@ -171,29 +42,9 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">shop</a>
-                    <ul>
-                        <li><a href="shop.html">shop</a></li>
-                        <li><a href="shop-detail.html">shop detail</a></li>
-                        <li><a href="cart.html">cart</a></li>
-                    </ul>
+                    <a href="@Url.Action("Index", "PointTable")">Puan Durumu</a>
                 </li>
-                <li>
-                    <a href="#">pages</a>
-                    <ul>
-                        <li><a href="gallery.html">gallery</a></li>
-                        <li><a href="blog.html">blog</a></li>
-                        <li><a href="blog-detail.html">blog detail</a></li>
-                        <li><a href="blog-grid-view.html">blog grid view</a></li>
-                        <li><a href="blog-grid-view-2.html">blog grid view-2</a></li>
-                        <li><a href="blog-larg-view.html">blog larg view</a></li>
-                        <li><a href="blog-list-view.html">blog list view</a></li>
-                        <li><a href="point-table.html">point table</a></li>
-                        <li><a href="404.html">404</a></li>
-                        <li><a href="underconstraction.html">underconstraction</a></li>
-                    </ul>
-                </li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="#">İletişim</a></li>
             </ul>
             <!-- Nav List -->
 
